fixed z-index

--- a/frontend/src/components/chat/chat_room.module.css
+++ b/frontend/src/components/chat/chat_room.module.css
@@ -8,6 +8,7 @@
     height: 50vh;
     padding-top: 50px;
     background-color: white;
+    z-index: 0;
 }
 
 .messageForm {
